--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,17 +2,27 @@
     <string name="app_name">LAB_WEEK_03</string>
     <string name="affogato_title">AFFOGATO</string>
     <string name="affogato_desc">Espresso poured on a vanilla ice cream. Served in a
-cappuccino cup.</string>
+cappuccino cup.
+    </string>
     <string name="americano_title">AMERICANO</string>
     <string name="americano_desc">Espresso with added hot water (100-150 ml). Often
 served in a cappuccino cup. (The espresso is added into the hot water rather than
 all the water being flowed through the coffee that would lead to over
-extraction.)</string>
+extraction.)
+    </string>
+
     <string name="latte_title">CAFFE LATTE</string>
-    <string name="latte_desc">A tall, mild \'milk coffee\' (about 150-300 ml). An
+    <string name="latte_desc">A tall, mild milk coffee (about 150-300 ml). An
 espresso with steamed milk and only a little milk foam poured over it. Serve in a
 latte glass or a coffee cup. Flavored syrup can be added.</string>
     <string name="coffee_list">Coffee List</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="espresso_title">ESPRESSO</string>
+    <string name="espresso_desc">Espresso is a concentrated coffee drink
+        made by forcing hot water under high pressure through
+        finely-ground coffee beans.</string>
+    <string name="macchiato_title">MACCHIATO</string>
+    <string name="macchiato_desc">Caffè macchiato, sometimes called
+        espresso macchiato, is an espresso coffee drink with a
+        small amount of milk, usually foamed.</string>
 </resources>
